# AxumKit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.en.md  README.ko.md  README.md  axumkit_banner.psd  axumkit_logo_circle.psd  docker-compose.apisix.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  docker.md  justfile  pending_commit.md  swagger.json
crates/auth-core/: Cargo.toml
crates/auth-core/src/: aead.rs  constant_time.rs  keyed_hash.rs  lib.rs  token.rs
crates/axumkit-dto/: Cargo.toml
crates/axumkit-dto/src/: lib.rs
crates/axumkit-dto/src/action_logs/request/: get_action_logs.rs  stream_actions.rs
crates/axumkit-dto/src/action_logs/response/: action_log.rs
crates/axumkit-dto/src/auth/request/: complete_signup.rs  forgot_password.rs  login.rs  reset_password.rs  totp_enable.rs  totp_verify.rs
crates/axumkit-dto/src/auth/response/: login.rs  logout.rs  totp_backup_codes.rs  totp_enable.rs  totp_status.rs
crates/axumkit-dto/src/moderation/: mod.rs
crates/axumkit-dto/src/user/: mod.rs
crates/axumkit-dto/src/validator/: datetime_validator.rs  json_validator.rs  mod.rs  multipart_validator.rs  path_validator.rs  query_validator.rs  string_validator.rs
crates/axumkit-entity/: Cargo.toml
crates/axumkit-entity/src/: lib.rs  moderation_logs.rs  user_bans.rs  user_roles.rs  users.rs
crates/axumkit-entity/src/common/: access_level.rs  mod.rs  oauth_provider.rs  role.rs
crates/axumkit-server/: Cargo.toml
crates/axumkit-server/src/: main.rs  state.rs
crates/axumkit-server/src/api/: openapi.rs  routes.rs
crates/axumkit-server/src/bridge/: turnstile_client.rs
crates/axumkit-server/src/connection/: database_conn.rs  http_conn.rs  meilisearch_conn.rs  r2_conn.rs  seaweedfs_conn.rs
crates/axumkit-server/src/eventstream/: publisher.rs  subscriber.rs
crates/axumkit-server/src/extractors/: session.rs  turnstile.rs
crates/axumkit-server/src/middleware/: anonymous_user.rs  cors.rs  mod.rs  rate_limit.rs
crates/axumkit-server/src/permission/: mod.rs  permission_service.rs  rule.rs  tests.rs
crates/axumkit-server/src/repository/: mod.rs
crates/axumkit-server/src/service/: mod.rs
crates/axumkit-server/src/utils/: r2_url.rs  redis_cache.rs  redis_keys.rs  session_helper.rs
crates/axumkit-worker/: Cargo.toml
crates/axumkit-worker/src/: lib.rs  main.rs
crates/axumkit-worker/src/config/: worker_config.rs
crates/axumkit-worker/src/connection/: database_conn.rs  r2_conn.rs  seaweedfs_conn.rs
crates/axumkit-worker/src/jobs/: mod.rs
crates/axumkit-worker/src/nats/: streams.rs
crates/dto/: Cargo.toml
crates/dto/src/: actor.rs  lib.rs
crates/dto/src/acl/: mod.rs
crates/dto/src/acl/request/: groups.rs  (+3 more)
crates/dto/src/board/: mod.rs
crates/dto/src/groups/: mod.rs
crates/dto/src/notification/: mod.rs
crates/dto/src/user/: mod.rs
crates/dto/src/validator/: datetime_validator.rs  json_validator.rs  multipart_validator.rs  path_validator.rs  query_validator.rs  string_validator.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/src/fixtures/: containers.rs  test_server.rs
crates/e2e/src/helpers/: mod.rs  posts.rs  users.rs
crates/e2e/tests/: account.rs  auth.rs  board.rs  moderation.rs  notification.rs  rbac.rs  search.rs  smoke.rs  totp.rs  user_public.rs
crates/e2e/tests/user/: create.rs
crates/errors/: Cargo.toml
crates/errors/src/: errors.rs  protocol.rs
crates/errors/src/handlers/: acl_handler.rs  board_handler.rs  email_handler.rs  eventstream_handler.rs  file_handler.rs  general_handler.rs  group_handler.rs  meilisearch_handler.rs  mod.rs  oauth_handler.rs  password_handler.rs  rate_limit_handler.rs  session_handler.rs  system_handler.rs  token_handler.rs  totp_handler.rs  turnstile_handler.rs  user_handler.rs  worker_handler.rs
crates/image_utils/: Cargo.toml
crates/image_utils/src/image_processor/: image_processor.rs  image_validator.rs  mod.rs
crates/job_queue/: Cargo.toml
crates/job_queue/src/: jobs.rs  lib.rs  streams.rs  subjects.rs
crates/notification_repository/: Cargo.toml
crates/notification_repository/src/: deliveries.rs  lib.rs  preferences.rs
crates/search_index/: Cargo.toml
crates/search_index/src/: lib.rs  users.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  state.rs
crates/server/src/api/: mod.rs  openapi.rs  routes.rs
crates/server/src/bridge/: image_processor_client.rs  media_processor_client.rs  mod.rs  turnstile_client.rs
crates/server/src/config/: server_config.rs
crates/server/src/connection/: database_conn.rs  meilisearch_conn.rs  r2_assets_conn.rs  r2_conn.rs  redis_conn.rs
crates/server/src/entity/: user_refresh_tokens.rs  users.rs
crates/server/src/errors/: errors.rs  protocol.rs
crates/server/src/eventstream/: publisher.rs  subscriber.rs
crates/server/src/extractors/: session.rs  turnstile.rs
crates/server/src/middleware/: anonymous_user.rs  auth.rs  cors.rs  mod.rs  rate_limit.rs  require_role.rs
crates/server/src/permission/: board.rs  mod.rs  permission_service.rs  rule.rs  tests.rs
crates/server/src/repository/: common.rs  mod.rs
crates/server/src/service/: actors.rs  blob_cleanup.rs  cursor_pagination.rs  mod.rs
crates/server/src/utils/: email.rs  ip.rs  logger.rs  mentions.rs  mod.rs  r2_url.rs  redis_cache.rs  redis_keys.rs  session_helper.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  r2.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
crates/worker/src/clients/: image_processor.rs  mail.rs  media_processor.rs  meilisearch.rs  mod.rs
crates/worker/src/config/: worker_config.rs
crates/worker/src/connection/: database_conn.rs  mod.rs  r2_assets_conn.rs  r2_conn.rs  redis_cache_conn.rs  redis_lock_conn.rs
crates/worker/src/jobs/: mod.rs
crates/worker/src/nats/: consumer.rs  mod.rs  shutdown.rs  streams.rs
crates/worker/src/templates/: account_deletion.mjml  device_verification.mjml  mod.rs  security_alert.mjml
crates/worker/src/utils/: logger.rs
(+1225 files in other folders)
