[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.8.0"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
repository = "https://github.com/levish0/AxumKit"
edition = "2024"
rust-version = "1.95.0"

[workspace.lints.clippy]
too_many_arguments = "allow"
module_inception = "allow"


[workspace.dependencies]
# Internal crates
config = { path = "crates/config" }
constants = { path = "crates/constants" }
dto = { path = "crates/dto" }
entity = { path = "crates/entity" }
errors = { path = "crates/errors" }
worker = { path = "crates/worker" }
server = { path = "crates/server" }
storage = { path = "crates/storage" }

# External dependencies
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["multipart", "macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header", "query"] }
tower = { version = "0.5.3", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.6.11", features = ["cors", "auth", "trace", "request-id"] }
tower-cookies = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sea-orm = { version = "2.0.0-rc.40", features = ["postgres-array", "sqlx-postgres", "runtime-tokio-native-tls", "with-ipnetwork"] }
redis = { version = "1.2.2", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }
tokio-cron-scheduler = "0.15.1"
argon2 = "0.5.3"
oauth2 = { version = "5.0.0"}
oauth2-reqwest = "0.1.0-alpha.3"
totp-rs = { version = "5.7.1", features = ["qr"] }
cookie = "0.18.1"
aws-sdk-s3 = "1.135.0"
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
meilisearch-sdk = { version = "0.33.0" }
utoipa = { version = "5.5.0", features = ["axum_extras", "openapi_extensions", "time", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing-appender = "0.2.5"
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
uuid = { version = "1.23.3", features = ["v7", "v4"] }
dotenvy = "0.15.7"
rand = "0.10.1"
hex = "0.4.3"
base64 = "0.22.1"
blake3 = "1.8.5"
png = "0.18.1"
zstd = "0.13.3"
lettre = { version = "0.11.22", features = ["tokio1-native-tls"] }
mrml = "6.0.1"
minijinja = { version = "2.20.0", features = ["loader"] }
futures = "0.3.32"
async-nats = "0.49.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
sitemap-rs = "0.4.0"
urlencoding = "2.1.3"
unicode-general-category = "1.1.0"
jsonwebtoken = "10.4.0"

[profile.dev]
opt-level = 1
