[package]
name = "auth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic authentication & cryptographic primitives (no project-specific identifiers)."

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
subtle = { workspace = true }
