[package]
name = "axumkit_entity"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "axumkit/entity"

[lib]
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
serde.workspace = true
uuid.workspace = true
utoipa.workspace = true
