[package]
name = "errors"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
config = { workspace = true }

# External dependencies
serde = { workspace = true }
sea-orm = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

