[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared storage clients for AxumKit crates"

[lints]
workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
tokio.workspace = true
zstd.workspace = true
