[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "worker"

[lib]
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
apalis.workspace = true
apalis-amqp.workspace = true
apalis-cron.workspace = true
redis.workspace = true
sea-orm.workspace = true
meilisearch-sdk.workspace = true
lettre.workspace = true
mrml.workspace = true
minijinja.workspace = true
cron.workspace = true

entity = { path = "../entity" }