[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "worker"

[lib]
path = "src/lib.rs"

[[bin]]
name = "v7_worker"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tokio-cron-scheduler.workspace = true
redis.workspace = true
sea-orm.workspace = true
meilisearch-sdk.workspace = true
lettre.workspace = true
mrml.workspace = true
minijinja.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
zstd.workspace = true
futures.workspace = true
async-nats.workspace = true
sitemap-rs = "0.4.0"
urlencoding = "2.1.3"